In my products.html file, I have wrapped the shoe images around an anchor tag to direct them towards the shoes product page. Such as if you click on the Clancy Blue thumbnail image it will direct you to the productItem.html page. What I will do next is use JS eventlisteners to change the productItem.html content to reflect the shoe the user clicks to view. Moreover, I had issues with the productItem.html/css file structuring the document and it's a mess. I had issues with unusal specificty and was getting some inconsistent results.

--- a/about_page/about.css
+++ b/about_page/about.css
@@ -5,7 +5,7 @@
  **********************************************************/
 main {
     background-color: white;
-    height: 900px;
+    height: 900000px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -16,7 +16,7 @@ main {
  **********************************************************/
 #productPanel {
     background-color: transparent;
-    height: 90%;
+    height: 90000000000px;
     width: 80%;
 }
 /* ============== MAIN END ================= */
