--- a/styles.css
+++ b/styles.css
@@ -371,3 +371,14 @@ footer #navLinks li {
 } */
 
 
+/* .test {
+    background-color: darkgreen;
+    height: 500px;
+    width: 900px;
+}
+
+.test2 {
+    background-color: slateblue;
+    height: 80%;
+    width: 80%;
+} */
